--- a/styles.css
+++ b/styles.css
@@ -10,28 +10,37 @@ header {
   width: 100%;
   height: 10vh;
   color: white;
-  background-color: black;
+  background-color: #00b068;
   text-align: center;
   padding: 1.5rem;
+}
+
+.news {
+  width: 160px;
+  background-color: purple;
+}
+
+.newsContainer {
+  margin: 0;
+  padding: 0;
+}
+
+.news-scroll a {
+  text-decoration: none;
 }
 
 #worldClocks {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-top: 1rem;
+  margin-top: 2.5rem;
 }
 
 body {
-  background: #eee;
+  background: #f5f7f6;
   font-size: 100%;
 }
-.news {
-  width: 160px;
-}
-.news-scroll a {
-  text-decoration: none;
-}
+
 .dot {
   height: 6px;
   width: 6px;
@@ -44,17 +53,40 @@ body {
 }
 
 #displayArea {
-  border: 1px solid red;
+  background-color: white;
 }
 
 #displayArea1 {
-  border: 1px solid red;
+  background-color: white;
+  margin-left: 1rem;
 }
 
 a {
   padding-right: 20px;
 }
 
-.news {
-  background-color: purple;
+button {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: none;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  background-color: #b4b4b4;
+  color: #070703;
+  text-align: center;
+  transition: all 0.2s;
+}
+button:hover {
+  color: #000000;
+  background-color: #00b068;
+}
+@media all and (max-width: 30em) {
+  button {
+    display: block;
+    margin: 0.4em auto;
+  }
 }
