--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,24 @@ body {
 
 #displayArea {
   background-color: white;
+  padding: 20px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 10px 10px 36px 1px rgba(90,90,90,0.49);
+  -webkit-box-shadow: 10px 10px 36px 1px rgba(90,90,90,0.49);
+  -moz-box-shadow: 10px 10px 36px 1px rgba(90,90,90,0.49);
+  
 }
 
 #displayArea1 {
   background-color: white;
-  margin-left: 1rem;
+  padding: 20px;
+margin-top: 2rem;
+margin-bottom: 2rem;
+box-shadow: 10px 10px 36px 1px rgba(90,90,90,0.49);
+-webkit-box-shadow: 10px 10px 36px 1px rgba(90,90,90,0.49);
+-moz-box-shadow: 10px 10px 36px 1px rgba(90,90,90,0.49);
+
 }
 
 a {
